# embeddedspy

./: .travis.yml  CMakeLists.txt  LICENCE  README.md
WebServiceSpy/: CMakeLists.txt
WebServiceSpy/cmake/: CPackConfig.cmake  WebServiceSpyConfig.cmake
WebServiceSpy/include/: CMakeLists.txt
WebServiceSpy/include/WebServiceSpy/: Version.h.in  WebServer.h
WebServiceSpy/src/: CMakeLists.txt  WebServer.cpp  main.cpp
WebServiceSpy/test/: CMakeLists.txt
